✨ feat: Nova funcionalidade implementada. Web Speech API

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=CayuxYHL"></script>
+    <!--    <script src="https://code.responsivevoice.org/responsivevoice.js?key=CayuxYHL"></script> -->
     <script src="app.js" defer></script>
 </body>
 
